VERIFIED FIXED26814
[Gtk] Caret-moved events are not issued for the correct offset when text is selected forward
https://bugs.webkit.org/show_bug.cgi?id=26814
Summary [Gtk] Caret-moved events are not issued for the correct offset when text is s...
Joanmarie Diggs
Reported 2009-06-29 14:02:18 PDT
(This is a spin-off bug from bug #25526 comment #15) Steps to reproduce: 1. Launch Epiphany and Accerciser. 2. Having enabled Accerciser's event monitor to examine object:text-caret-moved events, use Shift+Right to select forward by character. Expected results: The offset reported for each associated caret-moved event would reflect the current character offset. Actual results: The offset reported for each associated caret-moved event does not change and reflects the offset of the selection start.
Attachments
textcaretmoved.patch (2.71 KB, patch)
2009-07-02 00:48 PDT, Xan Lopez
jmalonzo: review+
Xan Lopez
Comment 1 2009-07-02 00:48:40 PDT
Created attachment 32172 [details] textcaretmoved.patch Report the offset from the end of the selection.
Jan Alonzo
Comment 2 2009-07-03 05:45:29 PDT
Comment on attachment 32172 [details] textcaretmoved.patch r=me.
Xan Lopez
Comment 3 2009-07-03 07:11:25 PDT
Landed as r45535.
Joanmarie Diggs
Comment 4 2009-07-03 21:19:23 PDT
Verifying. Thanks Xan!
Note You need to log in before you can comment on or make changes to this bug.