WebCore/editing/gtk/SelectionControllerGtk.cpp
@@ -34,7 +34,7 @@ void SelectionController::notifyAccessibilityForSelectionChange()
         AccessibilityObject* accessibilityObject = m_frame->document()->axObjectCache()->getOrCreate(focusedNode);
         AtkObject* wrapper = accessibilityObject->wrapper();
         if (ATK_IS_TEXT(wrapper)) {
-            g_signal_emit_by_name(wrapper, "text-caret-moved", m_sel.start().computeOffsetInContainerNode());
+            g_signal_emit_by_name(wrapper, "text-caret-moved", m_sel.end().computeOffsetInContainerNode());
 
             if (m_sel.isRange())
                 g_signal_emit_by_name(wrapper, "text-selection-changed");
